# tunix

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pylintrc-notebooks  CONTRIBUTING.md  README.md  code_style.sh  pyproject.toml  readthedocs.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_and_test_tunix.yml  build_package.yml  pypi_release.yml  run_notebooks.yml  run_tests_against_package.yml  tpu-tests.yml
docs/: Makefile  code-of-conduct.md  conf.py  contributing.md  gallery.rst  index.md
docs/api/: api_distillation.rst  api_generation.rst  api_rl.rst  api_sft.rst
docs/ext/: coverage_check.py
examples/: README.rst  dpo_demo.ipynb  dpo_demo_gemma3.ipynb  grpo_demo.ipynb  grpo_demo_test.ipynb  logit_distillation.ipynb  qlora_demo.ipynb  qwen3_example.ipynb
examples/model_load/from_safetensor_load/: gemma2_model_load.ipynb  gemma3_model_load.ipynb
examples/sft/mtnt/: run_gemma3_4b.sh  run_gemma_2b.sh  run_llama3.2_3b.sh
scripts/: forward_pass_logit_checker.py  grpo_demo_llama3_qwen2.py  llama3_example.py
tests/distillation/feature_extraction/: projection_test.py  sowed_module_test.py
tests/generate/: sampler_test.py  utils_test.py  vllm_sampler_test.py
tests/rl/: common_test.py  utils_test.py
tests/rl/grpo/: grpo_helpers_test.py  grpo_learner_test.py
tests/rl/ppo/: ppo_helpers_test.py  ppo_learner_test.py
tests/sft/: checkpoint_manager_test.py  config_test.py  metrics_logger_test.py  peft_trainer_test.py  profiler_test.py  progress_bar_test.py
tests/sft/dpo/: dpo_trainer_test.py
tunix/: __init__.py
tunix/distillation/feature_extraction/: pooling.py
tunix/distillation/strategies/: attention.py  feature_pooling.py  feature_projection.py  logit.py
tunix/examples/data/: translation_dataset.py
tunix/generate/: base_sampler.py  sampler.py  tokenizer_adapter.py  utils.py  vllm_sampler.py
tunix/models/: safetensors_loader.py
tunix/models/gemma/: gemma.py  params_safetensors.py  sampler.py
tunix/models/gemma3/: model.py  params.py  params_safetensors.py
tunix/models/llama3/: model.py  params.py
tunix/models/qwen2/: model.py  params.py
tunix/models/qwen3/: model.py  params.py
tunix/oss/: utils.py
tunix/rl/: common.py  reshard.py  rl_cluster.py  rl_learner.py  trainer.py  utils.py
tunix/rl/experimental/agentic/agents/: agent_types.py  base_agent.py  tool_agent.py
tunix/rl/experimental/agentic/environments/: base_environment.py  tool_environment.py
tunix/rl/experimental/agentic/prompts/: prompt_template.py
tunix/rl/experimental/agentic/rewards/: reward.py  reward_types.py
tunix/rl/experimental/agentic/tools/: base_tool.py  calculator_tool.py  tool_manager.py
tunix/rl/experimental/agentic/trajectory/: trajectory_collect_engine.py
tunix/rl/grpo/: grpo_learner.py
tunix/rl/inference/: inference_worker.py
tunix/rl/ppo/: ppo_helpers.py  ppo_learner.py
tunix/rl/rollout/: base_rollout.py  vanilla_rollout.py  vllm_rollout.py
tunix/sft/: base_config.yaml  checkpoint_manager.py  config.py  hooks.py  inflight_throttler.py  metrics_logger.py  peft_main.py  peft_trainer.py  profiler.py  progress_bar.py  sharding_utils.py  system_metrics_calculator.py  utils.py
tunix/sft/dpo/: dpo_trainer.py
tunix/sft/mtnt/: run_qwen2.5_0.5b.sh
tunix/tests/: test_common.py
(+4 files in other folders)
