[project]
name = "tunix"
version = "0.0.0"
authors = [
  { name = "Tunix Developers", email = "tunix-dev@google.com" },
]
description = "A lightweight JAX-native LLM post-training framework."
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "datasets",
  "flax@git+https://github.com/google/flax", # TODO: change to proper release
  "grain",
  "huggingface_hub",
  "jax",
  "jaxtyping",
  "kagglehub",
  "omegaconf",
  "qwix@git+https://github.com/google/qwix", # TODO: change to proper release
  "sentencepiece",
  "tensorboardX",
  "tensorflow_datasets",
  "tqdm",
  "transformers",
]

[project.urls]
Source = "https://github.com/google/tunix"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tunix*"]

[tool.pyink]
line-length = 80
unstable = true
target-version = []
pyink-indentation = 2
pyink-use-majority-quotes = true
pyink-annotation-pragmas = [
  "noqa",
  "pylint:",
  "type: ignore",
  "pytype:",
  "mypy:",
  "pyright:",
  "pyre-",
]
