[project]
name = "google-tunix"
version = "0.0.1"
authors = [
  { name = "Tunix Developers", email = "tunix-dev@google.com" },
]
description = "A lightweight JAX-native LLM post-training framework."
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "datasets",
  "flax@git+https://github.com/google/flax", # TODO: change to proper release
  "grain",
  "huggingface_hub",
  "jax",
  "jax[tpu]",
  "jaxtyping",
  "kagglehub",
  "omegaconf",
  "qwix",
  "sentencepiece",
  "tensorboardX",
  "tensorflow_datasets",
  "tqdm",
  "transformers",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",  # Older versions fail to pin pydata-sphinx-theme
    "sphinx-autodoc-typehints",
    "ipython>=8.8.0",  # 8.7.0 has ipython3 lexer error
    "myst-nb>=1.3.0",
    "matplotlib>=3.10.0",
    "sphinx-gallery>=0.19.0",
    "sphinx-collections>=0.0.1",
    "sphinx_contributors",
]

[project.urls]
Source = "https://github.com/google/tunix"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tunix*"]

[tool.pyink]
line-length = 80
unstable = true
target-version = []
pyink-indentation = 2
pyink-use-majority-quotes = true
pyink-annotation-pragmas = [
  "noqa",
  "pylint:",
  "type: ignore",
  "pytype:",
  "mypy:",
  "pyright:",
  "pyre-",
  "@title",
  "@param",
  "@markdown",
  "@tidy",
  "@test",
]
pyink-ipynb-indentation = 2
pyink-ipynb-unicode-escape = true
